@@ -3,7 +3,6 @@ package yjh.devtoon.promotion.application;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import yjh.devtoon.common.exception.DevtoonException;
@@ -16,18 +15,18 @@ import yjh.devtoon.promotion.dto.request.PromotionAttributeCreateRequest;
 import yjh.devtoon.promotion.dto.request.PromotionCreateRequest;
 import yjh.devtoon.promotion.infrastructure.PromotionAttributeRepository;
 import yjh.devtoon.promotion.infrastructure.PromotionRepository;
-import java.time.Duration;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class PromotionService {
 
-    private static final String CACHE_KEY = "promotion:active:list";
-    private static final Duration CACHE_DURATION = Duration.ofHours(24);
+    private static final String CACHE_KEY = "promotion:active";
 
     private final PromotionRepository promotionRepository;
     private final PromotionAttributeRepository promotionAttributeRepository;
@@ -57,14 +56,18 @@ public class PromotionService {
                         promotionAttributeRequest))
                 .forEach(promotionAttributeRepository::save);
 
-        // 비동기적으로 캐시 무효화
-        invalidateCacheAsync();
-        log.info("캐시 무효화 완료: {}", CACHE_KEY);
+        cachePromotion(savedPromotion);
     }
 
-    @Async
-    public void invalidateCacheAsync() {
-        promotionRedisTemplate.delete(CACHE_KEY);
+    // 각 프로모션을 개별적으로 캐시에 저장하는 메서드
+    private void cachePromotion(PromotionEntity promotion) {
+        List<PromotionEntity> cachedPromotions =
+                promotionRedisTemplate.opsForValue().get(CACHE_KEY);
+        if (cachedPromotions == null) {
+            cachedPromotions = new ArrayList<>();
+        }
+        cachedPromotions.add(promotion);
+        promotionRedisTemplate.opsForValue().set(CACHE_KEY, cachedPromotions);
     }
 
     private PromotionAttributeEntity toEntity(
@@ -78,7 +81,7 @@ public class PromotionService {
     }
 
     /**
-     * [관리자용] 프로모션 삭제
+     * 프로모션 삭제(종료)
      * : 삭제 시간을 통해 로직상에서 삭제 처리를 구분합니다.
      */
     @Transactional
@@ -89,47 +92,49 @@ public class PromotionService {
                         ErrorMessage.getResourceNotFound(ResourceType.PROMOTION, id)
                 ));
         promotion.recordDeletion(LocalDateTime.now());
+        // 캐시에서도 삭제
+        List<PromotionEntity> cachedPromotions =
+                promotionRedisTemplate.opsForValue().get(CACHE_KEY);
+        if (cachedPromotions != null) {
+            cachedPromotions.removeIf(p -> p.getId().equals(id));
+            promotionRedisTemplate.opsForValue().set(CACHE_KEY, cachedPromotions);
+        }
         return promotionRepository.save(promotion);
     }
 
     /**
      * 현재 적용 가능한 모든 프로모션 조회
-     * : 프로모션만 조회합니다. 프로모션이 없는 경우 빈 리스트를 반환합니다.
+     * : 프로모션만 조회합니다. 현재 적용 가능한 프로모션이 없는 경우 빈 리스트를 반환합니다.
      */
     @Transactional(readOnly = true)
     public List<PromotionEntity> retrieveActivePromotions() {
-        log.info("현재 적용 가능한 모든 프로모션 조회 시작");
         List<PromotionEntity> promotions = getCachedPromotions();
-        if (promotions == null) {
+        if (promotions.isEmpty()) {
             promotions = fetchAndCachePromotions();
         }
-        log.info("현재 적용 가능한 모든 프로모션 조회 완료 (개수): {}", promotions.size());
         return promotions;
     }
 
     /**
-     * 캐시에서 프로모션 조회
+     * 캐시된 프로모션 조회
+     * : 캐시된 프로모션이 없다면 빈 리스트를 반환합니다.
      */
     private List<PromotionEntity> getCachedPromotions() {
-        log.info("캐시에서 프로모션 조회 시도");
         List<PromotionEntity> cachedPromotions =
                 promotionRedisTemplate.opsForValue().get(CACHE_KEY);
-        if (cachedPromotions != null) {
-            log.info("캐시에서 현재와 미래 프로모션 조회 성공: {}개", cachedPromotions.size());
+        if (cachedPromotions != null && !cachedPromotions.isEmpty()) {
             return filterCurrentPromotions(cachedPromotions);
         }
-        log.info("캐시에서 프로모션 조회 실패");
-        return null;
+        return Collections.emptyList();
     }
 
     /**
-     * DB에서 프로모션 조회 후 캐시에 저장
+     * 프로모션을 DB에서 조회하여 캐시에 저장
      */
     private List<PromotionEntity> fetchAndCachePromotions() {
-        log.info("캐시에 없어서 DB에서 프로모션 조회 후 캐시에 저장 시작");
         List<PromotionEntity> promotions = retrieveCurrentOrFuturePromotion();
-        promotionRedisTemplate.opsForValue().set(CACHE_KEY, promotions, CACHE_DURATION);
-        log.info("캐시에 없어서 DB에서 현재와 미래 프로모션 조회 후 캐시에 저장 완료: {}개", promotions.size());
+        // 모든 프로모션을 한 번에 캐시에 저장
+        promotionRedisTemplate.opsForValue().set(CACHE_KEY, promotions);
         return filterCurrentPromotions(promotions);
     }
 
@@ -137,36 +142,31 @@ public class PromotionService {
         LocalDateTime currentTime = LocalDateTime.now();
         List<PromotionEntity> promotions =
                 promotionRepository.findCurrentOrFuturePromotions(currentTime);
-
         if (promotions.isEmpty()) {
             return Collections.emptyList();
         }
-        log.info("현재 또는 미래의 프로모션 조회 성공: {}개", promotions.size());
         return promotions;
     }
-
 
     private List<PromotionEntity> filterCurrentPromotions(final List<PromotionEntity> currentAndFuturePromotions) {
         LocalDateTime currentTime = LocalDateTime.now();
         return currentAndFuturePromotions.stream()
                 .filter(p -> p.isCurrent(currentTime))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
      * 현재 적용 가능한 프로모션에 포함된 모든 프로모션 속성 조회
+     * : 현재 적용 가능한 프로모션이 없는 경우 빈 리스트를 반환합니다.
      */
     @Transactional(readOnly = true)
     public List<PromotionAttributeEntity> retrieveActivePromotionAttributes(Long promotionId) {
-        List<PromotionAttributeEntity> activePromotionAttributes =
-                findActivePromotionAttributes(promotionId);
-        return activePromotionAttributes;
+        return findActivePromotionAttributes(promotionId);
     }
 
     private List<PromotionAttributeEntity> findActivePromotionAttributes(Long promotionId) {
         List<PromotionAttributeEntity> promotionAttributes =
                 promotionAttributeRepository.findByPromotionEntityId(promotionId);
-
         if (promotionAttributes.isEmpty()) {
             return Collections.emptyList();
         }
